feat: Выполнить ФЗ-12. Изменить архитектуру проекта для работы с БД. Добавить интеграционные тесты