@@ -3,13 +3,17 @@ package ru.yandex.practicum.filmorate.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dto.NewUserRequest;
+import ru.yandex.practicum.filmorate.dto.UpdateUserRequest;
+import ru.yandex.practicum.filmorate.dto.UserDto;
 import ru.yandex.practicum.filmorate.exception.*;
+import ru.yandex.practicum.filmorate.mapper.UserMapper;
 import ru.yandex.practicum.filmorate.model.User;
-import ru.yandex.practicum.filmorate.storage.user.UserStorage;
+import ru.yandex.practicum.filmorate.storage.FriendshipStorage;
+import ru.yandex.practicum.filmorate.storage.UserStorage;
 import ru.yandex.practicum.filmorate.utils.UserValidate;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -18,134 +22,144 @@ public class UserService {
 
     private final UserStorage userStorage;
     private final UserValidate userValidate;
+    private final FriendshipStorage friendshipStorage;
 
-    public Collection<User> findAll() {
-        return userStorage.findAll();
+    // Получение всех пользователей
+    public Collection<UserDto> findAll() {
+        return userStorage.findAll().stream()
+                .map(UserMapper::mapToDto)
+                .toList();
     }
 
-    public User create(User user) {
+    // Получение пользователя по id
+    public UserDto getById(Long userId) {
+        return userStorage.findById(userId)
+                .map(UserMapper::mapToDto)
+                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
+    }
+
+    // Добавление пользователя
+    public UserDto create(NewUserRequest request) {
+        User user = UserMapper.mapToUser(request);
         userValidate.validateUser(user);
-        return userStorage.create(user);
+
+        User createdUser = userStorage.create(user);
+        return UserMapper.mapToDto(createdUser);
     }
 
-    public User update(User user) {
+    // Обновление пользователя
+    public UserDto update(UpdateUserRequest request) {
+        User user = UserMapper.mapToUser(request);
         userValidate.validateUser(user);
-        return userStorage.update(user);
+
+        User oldUser = userStorage.findById(request.getId())
+                .orElseThrow(() -> {
+                    log.warn("Пользователь с id:{} не найден", request.getId());
+                    return new NotFoundException("Пользователь не найден");
+                });
+        user = UserMapper.updateUserFields(oldUser, request);
+        return UserMapper.mapToDto(userStorage.update(user));
     }
 
-    public void delete(Long id) {
-        userStorage.delete(id);
-    }
-
-    public User getById(Long id) {
-        return userStorage.getById(id);
+    // Удаление пользователя
+    public void delete(Long userId) {
+        userStorage.delete(userId);
     }
 
     // Метод добавления пользователей в друзья
     public void addFriend(Long userId, Long friendId) {
-        final User user = userStorage.getById(userId);
-        if (user == null) {
-            log.warn("Попытка несуществующего пользователя с Id:{} добавить в друзья пользователей", userId);
-            throw new NotFoundException("Пользователь не найден");
-        }
+        final User user = userStorage.findById(userId)
+                .orElseThrow(() -> {
+                    log.warn("Попытка несуществующего пользователя с Id:{} добавить в кого-то в друзья", userId);
+                    throw new NotFoundException("Пользователь не найден");
+                });
 
-        final User friend = userStorage.getById(friendId);
-        if (friend == null) {
-            log.warn("Попытка добавить в друзья несуществующего пользователя с Id:{}", friendId);
-            throw new NotFoundException("Пользователь не найден");
-        }
+        final User friend = userStorage.findById(friendId)
+                .orElseThrow(() -> {
+                    log.warn("Попытка добавить в друзья несуществующего пользователя с Id:{}", friendId);
+                    throw new NotFoundException("Пользователь не найден");
+                });
 
         if (user.equals(friend)) {
             log.warn("Попытка добавить самого себя в друзья");
             throw new DuplicateException("Нельзя добавить самого себя в друзья");
         }
 
-        Set<Long> userFriends = user.getFriends();
-        if (userFriends.contains(friendId)) {
-            log.debug("Пользователь с Id:{} уже добавил в друзья пользователя с Id:{}", userId, friendId);
-            return;
+        if (user.getFriends().contains(friendId)) {
+            log.warn("Попытка пользователя с Id:{} снова добавить в друзья пользователя с Id:{}", userId, friendId);
+            throw new DuplicateException("Пользователь уже отправлял запрос на дружбу");
         }
-
-        userFriends.add(friendId);
-        user.setFriends(userFriends);
+        user.getFriends().add(friendId);
         userStorage.update(user);
 
-        Set<Long> friendFriends = friend.getFriends();
-        friendFriends.add(userId);
-        friend.setFriends(friendFriends);
-        userStorage.update(friend);
+        friendshipStorage.addFriend(userId, friendId);
         log.debug("Пользователи с Id:{} и Id:{} теперь друзья", userId, friendId);
     }
 
     // Метод удаления пользователей из друзей
     public void removeFriend(Long userId, Long friendId) {
-        final User user = userStorage.getById(userId);
-        if (user == null) {
-            log.warn("Попытка несуществующего пользователя с Id:{} удалить кого-то из друзей", userId);
-            throw new NotFoundException("Пользователь не найден");
-        }
+        final User user = userStorage.findById(userId)
+                .orElseThrow(() -> {
+                    log.warn("Попытка несуществующего пользователя с Id:{} удалить кого-то из друзей", userId);
+                    throw new NotFoundException("Пользователь не найден");
+                });
 
-        final User friend = userStorage.getById(friendId);
-        if (friend == null) {
-            log.warn("Попытка удалить из друзей несуществующего пользователя с Id:{}", friendId);
-            throw new NotFoundException("Пользователь не найден");
-        }
+        final User friend = userStorage.findById(friendId)
+                .orElseThrow(() -> {
+                    log.warn("Попытка удалить из друзей несуществующего пользователя с Id:{}", friendId);
+                    throw new NotFoundException("Пользователь не найден");
+                });
 
         if (user.equals(friend)) {
             log.warn("При удалении из друзей были переданы одинаковые Id: userId={}, friendId={}", userId, friendId);
             throw new DuplicateException("Нельзя удалить самого себя из друзей");
         }
 
-        Set<Long> userFriends = user.getFriends();
-        if (!userFriends.contains(friendId)) {
-            log.debug("Пользователь с Id:{} не добавлял в друзья пользователя с Id:{}", userId, friendId);
+        if (!user.getFriends().contains(friendId)) {
+            log.warn("Пользователь с Id:{} не добавлял в друзья пользователя с Id:{}", userId, friendId);
             return;
         }
 
-        userFriends.remove(friendId);
-        user.setFriends(userFriends);
+        user.getFriends().remove(friendId);
         userStorage.update(user);
 
-        Set<Long> friendFriends = friend.getFriends();
-        friendFriends.remove(userId);
-        friend.setFriends(friendFriends);
-        userStorage.update(friend);
+        friendshipStorage.removeFriend(userId, friendId);
         log.debug("Пользователи с Id:{} и Id:{} больше не друзья", userId, friendId);
     }
 
     // Метод получения списка всех друзей пользователя
-    public Collection<User> getFriends(Long id) {
-        final User user = userStorage.getById(id);
-
-        if (user == null) {
-            log.warn("Попытка получить друзей несуществующего пользователя c Id:{}", id);
-            throw new NotFoundException("Пользователь не найден");
-        }
+    public Collection<UserDto> findAllFriends(Long userId) {
+        final User user = userStorage.findById(userId)
+                .orElseThrow(() -> {
+                    log.warn("Попытка получить друзей несуществующего пользователя c Id:{}", userId);
+                    throw new NotFoundException("Пользователь не найден");
+                });
 
         // Возвращаем пустую коллекцию, если у пользователя нет друзей
-        if (user.getFriends().isEmpty()) {
-            log.debug("У пользователя с Id:{} нет друзей", id);
+        if (user.getFriends() == null || user.getFriends().isEmpty()) {
+            log.debug("У пользователя с Id:{} нет друзей", userId);
             return Collections.emptyList();
         }
 
-        return user.getFriends().stream()
-                .map(userStorage::getById)
-                .collect(Collectors.toList());
+        return userStorage.findAll().stream()
+                .filter(u -> user.getFriends().contains(u.getId()))
+                .map(UserMapper::mapToDto)
+                .toList();
     }
 
     // Метод получения общих друзей
-    public Collection<User> getCommonFriends(Long userId, Long friendId) {
-        final User user = getById(userId);
-        if (user == null) {
-            log.warn("Попытка получить общих друзей у несуществующего пользователя c Id:{}", userId);
-            throw new NotFoundException("Пользователь не найден");
-        }
+    public Collection<UserDto> findCommonFriends(Long userId, Long friendId) {
+        final User user = userStorage.findById(userId)
+                .orElseThrow(() -> {
+                    log.warn("Попытка получить общих друзей у несуществующего пользователя c Id:{}", userId);
+                    throw new NotFoundException("Пользователь не найден");
+                });
 
-        final User friend = getById(friendId);
-        if (friend == null) {
-            log.warn("Попытка получить общих друзей с несуществующим пользователем с Id:{}",friendId);
-            throw new NotFoundException("Пользователь не найден");
-        }
+        final User friend = userStorage.findById(friendId)
+                .orElseThrow(() -> {
+                    log.warn("Попытка получить общих друзей с несуществующим пользователем с Id:{}",friendId);
+                    throw new NotFoundException("Пользователь не найден");
+                });
 
         // Поиск пересечения друзей
         Set<Long> intersection = new HashSet<>(user.getFriends());
@@ -157,6 +171,7 @@ public class UserService {
 
         return userStorage.findAll().stream()
                 .filter(u -> intersection.contains(u.getId()))
+                .map(UserMapper::mapToDto)
                 .toList();
     }
 }
